--- a/polls/static/polls/style.css
+++ b/polls/static/polls/style.css
@@ -1,7 +1,22 @@
-li a {
-    color: green;
+li {
+	list-style-type: none;
+}
+
+a {
+    text-decoration: none;
 }
 
 body {
 	background: white url("images/background.gif");
+	margin: 0;
+}
+
+.white-background {
+	position: relative;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background-color: white;
+	padding: 1em;
+	width: 60%;
 }
