--- a/polls/templates/polls/new.html
+++ b/polls/templates/polls/new.html
@@ -1,12 +1,12 @@
-{% load staticfiles %}
+{% extends "base.html" %}
 
-<link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
-
-<div class="white-background">
-	<h1>NEW THINGS!</h1>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <br /><input class="button" type="submit" value="Add Question" />
-  </form>
-</div>
+<% block content %>
+	<div class="white-background">
+		<h1>NEW THINGS!</h1>
+	  <form method="post">
+	    {% csrf_token %}
+	    {{ form.as_p }}
+	    <br /><input class="button" type="submit" value="Add Question" />
+	  </form>
+	</div>
+<% endblock %>
